# RWA-HUB

./: .env.example  .gitignore  .qiniu_pythonsdk_hostscache.json  =4.12.2  ASSET_CONTRACT_INTEGRATION_GUIDE.md  CLAUDE.md  CODE_CLEANUP_DEPLOYMENT_COMPLETE.md  CODE_SYNC_DEPLOYMENT_GUIDE.md  COMPLETE_PURCHASE_FLOW_IMPLEMENTATION.md  DEPLOYMENT_GUIDE.md  Dockerfile  ONCHAIN_HISTORY_IMPLEMENTATION_REPORT.md  PROJECT_STATUS_SUMMARY.md  PURCHASE_BUTTON_FINAL_FIX_SUMMARY.md  PURCHASE_FLOW_ANALYSIS.md  README.md  README_钱包修复.md  README_钱包调试.md  SCRIPTS_README.md  SERVER_CODE_POLICY.md  SERVER_TEST_CHECKLIST.md  SERVER_TEST_INSTRUCTIONS.md  SOLANA_AUTO_ONCHAIN_COMPLETE_VERIFICATION_REPORT.md  SPL_TOKEN_IMPLEMENTATION_PLAN.md  SYSTEM_BUG_FIX_SUMMARY.md  TRADE_SERVICE_V3_FIX_SUMMARY.md  VERSION  acceptance_test_report.json  add_admin_user.py  add_config.py  add_reward_plan_messages.py  add_spl_fields_migration.py  analyze_database_security.py  api_fix.py  app.py  app_wsgi.py  application.py  asset_deploy.py  asset_detail_fix.js  babel.cfg  (+177 more)
.gemini/: settings.json
app/: .env.example  __init__.py  config.py  extensions.py  models.py  tasks.py
backup/: README.md
contracts/: RealEstateMarket.sol
contracts_ethereum_backup/: RealEstateToken.sol
docs/: ADMIN重构总结.md  P2P购买与平台费用功能实现文档.md  README.md  SOL智能合约规范文档.md  api.md  deployment_guide.md  requirements.md  solana_contract_spec.md  代码质量规范.md  代码重构指南-Admin模块化.md  佣金系统完整架构_35%分佣规则.md  分红需求文档.md  分销系统需求文档.md  助记词配置指南.md  双地址支付方案设计文档.md  后台管理需求.md  安全配置指南.md  常见问题FAQ.md  支付流程文档.md  资产支付并上链功能需求文档.md  部署指南.md  部署规则.md  重构检查清单.md  重构记录-Admin模块.md
instance/: app.db
migrations/: add_columns_to_referral_tables.py  add_holdings_status_field.py  add_message_type_to_share_messages.py  add_performance_indexes.py  (+11 more)
program/: Anchor.toml  Cargo.toml  README.md
program/src/: dividend.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
rwahub-contracts/programs/rwa-trade/: Cargo.toml
rwahub-contracts/src/programs/rwa-dividend/: Cargo.toml
rwahub-contracts/src/programs/rwa-dividend/src/: lib.rs
rwahub-contracts/src/programs/rwa-trade/: Cargo.toml
rwahub-contracts/src/programs/rwa-trade/src/: lib.rs
(+345 files in other folders)
