[package]
name = "rwa-hub"
version = "0.1.0"
edition = "2021"
description = "Real World Asset Hub on Solana"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.17.0"
borsh = "0.10.3"
thiserror = "1.0.50"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.0.0", features = ["no-entrypoint"] }

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
overflow-checks = true 