[package]
name = "rwa-trade"
version = "0.1.0"
description = "RWA-Hub 交易合约"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rwa_trade"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
solana-program = "=2.1.0"